fix toggle in shift mapping using pluck and insert logic

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -271,7 +271,7 @@ body{
 
 .calendar-cell-sm{
   padding: 4px 8px!important;
-  font-size: 11px!important;
+  font-size: 10px!important;
   border: none!important;
   //border-radius: 50px!important;
 }
